# Formatting # Markdown upload help text

--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -28,8 +28,15 @@
                 <ul id="lst-tags" class="custom-well tag-list">
                 </ul>
             </div>
-            <strong class="text-danger small">Note: Deleting all keywords will set the resource sharing status to
-                private.</strong>
+
+            <span class="alert alert-info   group-title" role="alert">
+                <div class="flex">
+                    <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
+                    <em style="padding-right:20px;">
+                        <strong>Note:</strong> Deleting all keywords will set the resource sharing status to private.
+                    </em>
+                </div>
+            </span>
             <div>
                 <p class="text-danger small" id="id-keywords-msg" style="display: none;"> Duplicate. Keyword not added.</p>
             </div>
