--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -485,10 +485,16 @@
 
                             {% if page.perms.change and metadata_form and cm.get_supported_upload_file_types != "()" %}
                                 <div class="fb-upload-caption {% if cm.files.all.count > 0 and cm.allow_multiple_file_upload != "True" %}hidden{% endif %}">
-                                    <span><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload
+                                    <p><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload
                                         files smaller than 1GB in size by dragging & dropping, or click <a
                                                 id="upload-toggle" class="dz-clickable">here</a> to select them.
-                                    </span>
+                                    </p>
+
+                                    <p>
+                                        If you upload a readme.txt or readme.md file at the root level in your resource,
+                                        it will be rendered automatically on the page. Markdown formatting is allowed in
+                                        readme.md.<br><a href="https://guides.github.com/features/mastering-markdown/#syntax" target="_blank">Learn more about Markdown</a>
+                                    </p>
 
                                     <hr>
 
