--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -40,6 +40,21 @@
     </div>
     <div class="col-xs-12 content-block">
         <h4>Sources</h4>
+
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="flex">
+                <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
+                <em style="padding-right:20px;">If the data in your resource was derived from another source or dataset, you can cite or acknowledge
+                    those references here. Click on "Add Source" and then add a full text citation to the original
+                    content, a
+                    web link, or text describing the source of the data.</em>
+            </div>
+        </div>
+
+        {% if source_formset.initial|length > 0 %}
         <table class="table hs-table">
             <tbody>
             {% for source in source_formset.initial %}
@@ -59,10 +74,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <p><i>If the data in your resource was derived from another source or dataset, you can cite or acknowledge
-            those
-            references here. Click on "Add Source" and then add a full text citation to the original content, a web
-            link, or text describing the source of the data.</i></p>
+        {% endif %}
 
         <a id="add-source" class="btn btn-success" data-toggle="modal"
            data-target="#add-source-dialog"><i
@@ -74,6 +86,22 @@
     <div class="col-xs-12 content-block">
         <br>
         <h4>Relations</h4>
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="flex">
+                <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
+                <em style="padding-right:20px;">If this resource is related to other documents, datasets, websites, etc., you can record those
+                    relationships here as references. For example, if this resource is cited by a paper you published,
+                    select a relationship type of "Data for" and then provide a full text citation for the paper that
+                    used the data, including the paper's DOI encoded as an HTTP URL if available. This records that this
+                    resource is the data for the paper that cited it. If you enter a URL as part of the citation, it
+                    will be converted to an active link.</em>
+            </div>
+        </div>
+
+        {% if relation_formset.initial %}
         <table class="table hs-table">
             <tbody>
             {% for relation in relation_formset.initial %}
@@ -95,13 +123,7 @@
             {% endfor %}
             </tbody>
         </table>
-
-        <p><i>If this resource is related to other documents, datasets, websites, etc., you can record those
-        relationships here as references. For example, if this resource is cited by a paper you published,
-        select a relationship type of "Data for" and then provide a full text citation for the paper that used
-        the data, including the paper's DOI encoded as an HTTP URL if available. This records that this resource
-        is the data for the paper that cited it. If you enter a URL as part of the citation, it will be
-        converted to an active link.</i></p>
+        {% endif %}
 
         <a id="add-relation" class="btn btn-success" data-toggle="modal"
            data-target="#add-relation-dialog">
