--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1068,15 +1068,24 @@ table.info-table {
     resize: vertical
 }
 
-pre.readme {
-    padding: 2em;
+div.readme {
+    padding: 0;
     background-color: #FFF;
-    min-height: 200px;
-    height: 200px;
-    overflow: auto;
-    resize: vertical;
-    border-radius: 0
+	border: 1px solid #DDD;
 }
+
+div.readme .readme-content {
+	min-height: 200px;
+	height: 200px;
+    overflow: auto;
+	padding: 2em;
+	resize: vertical;
+}
+
+div.readme .readme-header {
+	border-bottom: 1px solid #DDD;
+}
+
 #resourceSpecificTab input.form-control[type='radio'], #resourceSpecificTab input.form-control[type='checkbox'] {
 	box-shadow: none;
 }
@@ -4323,7 +4332,7 @@ div.fb-upload-caption a {
   outline: none;
 }
 
-#fb-inner-buttons {
+#fb-inner-buttons, div.readme .readme-header  {
 	padding: 8px;
 	border-bottom: 1px solid #DDD;
 	background: rgb(255, 255, 255);
