further address test comment

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1828,7 +1828,7 @@
                 <div class="form-group">
                     <fieldset>
                     {# Reference Name #}
-                        <label class="col-sm-12">Create a name for the referenced content</label>
+                        <label class="col-sm-12">Create a name for the referenced content. This name will be displayed in the file content area of the resource</label>
                         <label for="txtRefName" class="col-sm-2 control-label">Name: *</label>
                         <input id="txtRefName" class="col-sm-10 modal-only-required" placeholder="Untitled">
                     </fieldset>
