--- a/theme/templates/resource-landing-page/highlights.html
+++ b/theme/templates/resource-landing-page/highlights.html
@@ -42,11 +42,11 @@
     {% endif %}
     <tr class="info-collapsible">
         <td class="text-center"><i class="fa fa-eye" aria-hidden="true"></i></td>
-        <td><strong>Views:&nbsp;&nbsp;</strong>1,835</td>
+        <td><strong>Views:&nbsp;&nbsp;</strong>{{ cm.view_count }}</td>
     </tr>
     <tr class="info-collapsible">
         <td class="text-center"><i class="fa fa-cloud-download" aria-hidden="true"></i></td>
-        <td><strong>Downloads:&nbsp;&nbsp;</strong>201</td>
+        <td><strong>Downloads:&nbsp;&nbsp;</strong>{{ cm.download_count }}</td>
     </tr>
     <tr class="info-collapsible">
         {% include "resource-landing-page/ratings.html" %}
@@ -54,7 +54,7 @@
     <tr class="info-collapsible">
         <td class="text-center"><i class="fa fa-comments-o" aria-hidden="true"></i></td>
         <td>
-            <span><a href="#comments">Comments:&nbsp;&nbsp;</a></span>0
+            <span><a href="#comments">Comments:&nbsp;&nbsp;</a></span>{{ cm.comments_count }}
         </td>
     </tr>
     <tr class="info-collapsible">
