--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -33,7 +33,7 @@
 
                 <br>
 
-                <div class="org-wrapper">
+                <div class="org-wrapper separate">
                     <span data-organization></span><span data-title></span>
                 </div>
 
