--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -133,11 +133,14 @@
 
                     {% endif %}
                     {% if cm.raccess.require_download_agreement %}
-                        <li id="btn-download-with-agreement" data-menu-name="download" data-toggle="modal" data-target="#license-agree-dialog-file">
+                        <li role="separator" class="divider"></li>
+                        <li id="btn-download-with-agreement" data-menu-name="download"
+                            data-toggle="modal" data-target="#license-agree-dialog-file">
                             <span class="glyphicon glyphicon-download icon-blue"></span>
                             <span>Download</span>
                         </li>
                     {% else %}
+                        <li role="separator" class="divider"></li>
                         <li id="btn-download" data-menu-name="download" >
                             <span class="glyphicon glyphicon-download icon-blue"></span>
                             <span>Download</span>
@@ -152,42 +155,61 @@
                         <span>Get file URL</span>
                     </li>
                     {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
-                         <li class="dropdown-submenu submenu-trigger">
+                        <li role="separator" class="divider"></li>
+                        <li class="dropdown-submenu submenu-trigger">
                             <span tabindex="-1" class="">
-                                <span class="glyphicon glyphicon-check icon-blue"></span>
-                                Set file type
+                                <i class="fa fa-exchange icon-blue" aria-hidden="true"></i>
+                                Convert to
                                 <span class="caret"></span>
                             </span>
                             <ul class="dropdown-menu">
-                                <li id="btn-set-generic-file-type" data-menu-name="setgenericfiletype" data-toggle="tooltip" title="Add metadata to an individual file">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Add metadata to file</span>
+                                <li id="btn-set-geo-file-type" data-menu-name="setgeorasterfiletype"
+                                    data-toggle="tooltip" data-placement="right"
+                                    title="Convert GeoTiff files to a geographic raster dataset to which you can add metadata">
+                                    <img src="{{ STATIC_URL }}img/resource-icons/geographicraster48x48.png"
+                                     alt="Geographic Raster Resource Icon" class="resource-type-icon"/>
+                                    <span>Geographic Raster</span>
                                 </li>
-                                <li id="btn-set-geo-file-type" data-menu-name="setgeorasterfiletype" data-toggle="tooltip" title="Convert GeoTiff files to a geographic raster dataset to which you can add metadata">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Convert to Geographic Raster</span>
+                                <li id="btn-set-netcdf-file-type" data-menu-name="setnetcdffiletype"
+                                    data-toggle="tooltip" data-placement="right"
+                                    title="Convert NetCDF files to a multidimensional dataset to which you can add metadata">
+                                    <img src="{{ STATIC_URL }}img/resource-icons/multidimensional48x48.png"
+                                     alt="Multidimensional Resource Icon" class="resource-type-icon"/>
+                                    <span>Multidimensional</span>
                                 </li>
-                                <li id="btn-set-netcdf-file-type" data-menu-name="setnetcdffiletype" data-toggle="tooltip" title="Convert NetCDF files to a multidimensional dataset to which you can add metadata">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Convert to Multidimensional</span>
+                                <li id="btn-set-geofeature-file-type" data-menu-name="setgeofeaturefiletype"
+                                    data-toggle="tooltip" data-placement="right"
+                                    title="Convert a shapefile to a geographic feature dataset to which you can add metadata">
+                                    <img src="{{ STATIC_URL }}img/resource-icons/geographicfeature48x48.png"
+                                     alt="Geographic Feature Resource Icon" class="resource-type-icon"/>
+                                    <span>Geographic Feature</span>
                                 </li>
-                                <li id="btn-set-geofeature-file-type" data-menu-name="setgeofeaturefiletype" data-toggle="tooltip" title="Convert a shapefile to a geographic feature dataset to which you can add metadata">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Convert to Geographic Feature</span>
+                                <li id="btn-set-refts-file-type" data-menu-name="setreftsfiletype" data-toggle="tooltip"
+                                    data-placement="right"
+                                    title="Convert to a referenced time series dataset with metadata">
+                                    <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
+                                     alt="Time Series Resource Icon" class="resource-type-icon"/>
+                                    <span>Referenced Time Series</span>
                                 </li>
-                                <li id="btn-set-refts-file-type" data-menu-name="setreftsfiletype" data-toggle="tooltip" title="Convert to a referenced time series dataset with metadata">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Convert to Referenced Time Series</span>
-                                </li>
-                                <li id="btn-set-timeseris-file-type" data-menu-name="settimeseriesfiletype" data-toggle="tooltip" title="Convert to a time series dataset to which you can add metadata">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Convert to Time Series</span>
-                                </li>
-                                <li id="btn-remove-aggregation" data-menu-name="removeaggregation" data-toggle="tooltip" title="Remove the content type association and delete content-level metadata">
-                                    <span class="glyphicon glyphicon-check icon-blue"></span>
-                                    <span>Remove content type</span>
+                                <li id="btn-set-timeseris-file-type" data-menu-name="settimeseriesfiletype"
+                                    data-toggle="tooltip" data-placement="right"
+                                    title="Convert to a time series dataset to which you can add metadata">
+                                    <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
+                                     alt="Time Series Resource Icon" class="resource-type-icon"/>
+                                    <span>Time Series</span>
                                 </li>
                             </ul>
+                        </li>
+                        <li id="btn-set-generic-file-type" data-menu-name="setgenericfiletype" data-toggle="tooltip"
+                            title="Add metadata to an individual file" data-placement="right">
+                            <span class="glyphicon glyphicon-check icon-blue"></span>
+                            <span>Add metadata to file</span>
+                        </li>
+                        <li id="btn-remove-aggregation" data-menu-name="removeaggregation" data-toggle="tooltip"
+                            title="Remove the content type association and delete content-level metadata"
+                            data-placement="right">
+                            <i class="fa fa-minus-circle btn-remove" aria-hidden="true"></i>
+                            <span>Remove content type</span>
                         </li>
                     {%  endif %}
                     {% if relevant_tools %}
