--- a/theme/templates/includes/author-link.html
+++ b/theme/templates/includes/author-link.html
@@ -1,18 +1,18 @@
 <a data-toggle="modal" class="author-preview"
    data-target="#view-author-modal" href="#"
-   data-name="{{ author.name }}"
-   data-email="{{ author.email }}"
-   data-organization="{{ author.organization }}"
+   data-name="{{ author.name|default:"" }}"
+   data-email="{{ author.email|default:"" }}"
+   data-organization="{{ author.organization|default:"" }}"
         {% for name, link in author.identifiers.items %}
    data-{{ name }}="{{ link }}"
         {% endfor %}
-   data-address="{{ author.address }}"
-   data-phone="{{ author.phone }}"
-   data-homepage="{{ author.homepage }}"
-   data-profileurl="{{ author.description }}">
+   data-address="{{ author.address|default:"" }}"
+   data-phone="{{ author.phone|default:"" }}"
+   data-homepage="{{ author.homepage|default:"" }}"
+   data-profileurl="{{ author.description|default:"" }}">
     {% if author.name %}
-        {{ author.name }}
+        {{ author.name|default:"" }}
     {% else %}
-        {{ author.organization }}
+        {{ author.organization|default:"" }}
     {% endif %}
 </a>
