--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -113,18 +113,15 @@
                             <h3>Coverage</h3>
                             {% if cm.resource_type == 'CompositeResource' %}
                                 <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible">
-                                    <label>You can set the spatial and temporal coverage manually by using the map to place a point or box or by filling in coordinates. Alternatively, you can add content files to your resource that have spatial coverage information (e.g., geographic
+                                    <span>You can set the spatial and temporal coverage manually by using the map to place a point or box or by filling in coordinates. Alternatively, you can add content files to your resource that have spatial coverage information (e.g., geographic
                                         feature, geographic raster, multidimensional, etc.) and then click the button to set the coverage from
-                                        the content files.</label>
+                                        the content files.</span>
                                 </div>
                             {% endif %}
                             <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible"
                                  style="display: none;">
-                                <label>Spatial coverage for time series resources should be set by editing the
-                                    coordinates of
-                                    the
-                                    monitoring
-                                    sites on the "Resource Specific" metadata tab. </label>
+                                <span>Spatial coverage for time series resources should be set by editing the
+                                    coordinates of the monitoring sites on the "Resource Specific" metadata tab.</span>
                             </div>
 
                             <input id="id_projection" maxlength="100" name="projection"
