--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -724,6 +724,7 @@
 
             {%  block modal %}
                 {% include "resource-landing-page/modals.html" %}
+                {% include "includes/author-preview.html" %}
                 {% include "resource-landing-page/coordinates_picker.html" %}
             {%  endblock %}
             </div>
