Serving dataTables locally

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -338,7 +338,7 @@
 
 {% block extra_css %}
     {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.dataTables.min.css">
 {% endblock %}
 
 {% block extra_js %}
