adding resource size

--- a/theme/templates/resource-landing-page/quota.html
+++ b/theme/templates/resource-landing-page/quota.html
@@ -1,6 +1,7 @@
 <div class="col-sm-12 content-block">
     <h3>Storage</h3>
-    <p>The size of this resource is XXX MB.</p>
+{#    TODO: FILTER FOR CONVERTING FILE SIZE#}
+    <p>The size of this resource is {{ cm.size }}.</p>
 </div>
 {% if is_owner_user %}
     <div class="col-sm-12 content-block">
