Adding file size filter to quota message

--- a/theme/templates/resource-landing-page/quota.html
+++ b/theme/templates/resource-landing-page/quota.html
@@ -1,7 +1,6 @@
 <div class="col-sm-12 content-block">
     <h3>Storage</h3>
-{#    TODO: FILTER FOR CONVERTING FILE SIZE#}
-    <p>The size of this resource is {{ cm.size }}.</p>
+    <p>The size of this resource is {{ cm.size|filesizeformat }}.</p>
 </div>
 {% if is_owner_user %}
     <div class="col-sm-12 content-block">
