hotfixes for DOI issues found in 1.16 beta

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -47,7 +47,7 @@
             <div class="col-xs-12">
                 <h2 class="page-title">Create Resource
                     <small class="text-muted">
-                        <em>DOI is reserved for the resource. </em>
+                        <em>A DOI is reserved for the resource. </em>
                         <span class="glyphicon glyphicon-info-sign info-popover-glypn"
                               data-toggle="popover1" data-placement="bottom"
                               data-content="A Digital Object Identifier (DOI) is reserved for the resource.
