--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -262,6 +262,23 @@
 
                 <div class="col-xs-12 content-block">
                     <h3>Content</h3>
+                    {% if page.perms.change and metadata_form and cm.get_supported_upload_file_types != "()" %}
+                        <div class="alert alert-info alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <div class="flex">
+                                <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
+                                <em>
+                                    If you upload a readme.txt or readme.md file at the root level in your
+                                    resource, it will be rendered automatically on the page. Markdown
+                                    formatting is allowed in readme.md.<br><strong><a
+                                        href="https://guides.github.com/features/mastering-markdown/#syntax"
+                                        target="_blank">Learn more about Markdown</a></strong>
+                                </em>
+                            </div>
+                        </div>
+                    {% endif %}
                     {% if show_content_files %}
                         {# ======= Modal window begins =======#}
                         <div class="modal fade" id="confirm-delete-dialog" tabindex="-1" role="dialog"
@@ -499,6 +516,11 @@
                                                 </li>
                                             </ul>
                                         </form>
+                                        <div class="fb-upload-caption ">
+                                            <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload files
+                                            smaller than 1GB in size by dragging & dropping, or click <a
+                                                id="upload-toggle" class="dz-clickable">here</a> to select them.
+                                        </div>
                                     </div>
                                     <div id="fb-metadata-helper">
                                         <i class="fa fa-caret-square-o-right fb-metadata-collapse" aria-hidden="true"
@@ -536,22 +558,10 @@
                             </div>
 
                             {% if page.perms.change and metadata_form and cm.get_supported_upload_file_types != "()" %}
-                                <div class="fb-upload-caption {% if cm.files.all.count > 0 and cm.allow_multiple_file_upload != "True" %}hidden{% endif %}">
-                                    <p><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload
-                                        files smaller than 1GB in size by dragging & dropping, or click <a
-                                                id="upload-toggle" class="dz-clickable">here</a> to select them.
-                                    </p>
-
-                                    <p>
-                                        If you upload a readme.txt or readme.md file at the root level in your resource,
-                                        it will be rendered automatically on the page. Markdown formatting is allowed in
-                                        readme.md.<br><a href="https://guides.github.com/features/mastering-markdown/#syntax" target="_blank">Learn more about Markdown</a>
-                                    </p>
-
-                                    <hr>
-
+                                <br>
+                                <div class="fb-footer {% if cm.files.all.count > 0 and cm.allow_multiple_file_upload != "True" %}hidden{% endif %}">
                                     <div id="log-into-irods">
-                                        <h5>Add files from an iRODS server</h5>
+                                        <h4>Add files from an iRODS server</h4>
                                         <a id="btn-signin-irods" type="button" class="btn btn-info"
                                            data-toggle="modal"
                                            data-target="#irodsSignin">
@@ -575,8 +585,6 @@
                                         <span class="glyphicon glyphicon-log-out"></span>
                                         &nbsp;&nbsp;Log out of iRODS
                                     </a>
-
-
                                 </div>
                             {% endif %}
                         </div>
